// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextBox should match snapshot with additional, optional props 1`] = `
<div
  className="textarea-wrapper textarea-wrapper--preview"
>
  <SuggestionBox
    channelId="channelId"
    className="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
    completeOnTab={true}
    containerClass=""
    contextId="channelId"
    disabled={true}
    forceSuggestionsWhenBlur={false}
    id="someid"
    inputComponent={[Function]}
    isRHS={true}
    listComponent={[Function]}
    listStyle="style"
    listenForMentionKeyClick={true}
    onBlur={[Function]}
    onChange={[Function]}
    onComposition={[Function]}
    onHeightChange={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    onSelect={[Function]}
    openOnFocus={false}
    openWhenEmpty={true}
    placeholder="placeholder text"
    providers={
      Array [
        AtMentionProvider {
          "autocompleteGroups": Array [
            Object {
              "id": "gid1",
            },
            Object {
              "id": "gid2",
            },
          ],
          "autocompleteUsersInChannel": [Function],
          "currentUserId": "currentUserId",
          "data": null,
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "priorityProfiles": undefined,
          "profilesInChannel": Array [
            Object {
              "id": "id1",
            },
            Object {
              "id": "id2",
            },
          ],
          "requestStarted": false,
          "searchAssociatedGroupsForReference": [Function],
          "useChannelMentions": true,
        },
        ChannelMentionProvider {
          "autocompleteChannels": [MockFunction],
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixTrimmed": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
        EmoticonProvider {
          "disableDispatches": false,
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
      ]
    }
    renderDividers={true}
    renderNoResults={false}
    replaceAllInputOnSelect={false}
    requiredCharacters={1}
    spellCheck="true"
    style={
      Object {
        "visibility": "hidden",
      }
    }
    value="some test text"
  />
  <div
    className="form-control custom-textarea textbox-preview-area"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onSelect={[Function]}
    tabIndex={0}
  >
    <Connect(PostMarkdown)
      channelId="channelId"
      isRHS={true}
      mentionKeys={Array []}
      message="some test text"
    />
  </div>
</div>
`;

exports[`components/TextBox should match snapshot with required props 1`] = `
<div
  className="textarea-wrapper"
>
  <SuggestionBox
    channelId="channelId"
    className="form-control custom-textarea"
    completeOnTab={true}
    containerClass=""
    contextId="channelId"
    forceSuggestionsWhenBlur={false}
    id="someid"
    inputComponent={[Function]}
    isRHS={false}
    listComponent={[Function]}
    listStyle="top"
    listenForMentionKeyClick={false}
    onBlur={[Function]}
    onChange={[Function]}
    onHeightChange={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    onSelect={[Function]}
    openOnFocus={false}
    openWhenEmpty={false}
    placeholder="placeholder text"
    providers={
      Array [
        AtMentionProvider {
          "autocompleteGroups": Array [
            Object {
              "id": "gid1",
            },
            Object {
              "id": "gid2",
            },
          ],
          "autocompleteUsersInChannel": [Function],
          "currentUserId": "currentUserId",
          "data": null,
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "priorityProfiles": undefined,
          "profilesInChannel": Array [
            Object {
              "id": "id1",
            },
            Object {
              "id": "id2",
            },
          ],
          "requestStarted": false,
          "searchAssociatedGroupsForReference": [Function],
          "useChannelMentions": true,
        },
        ChannelMentionProvider {
          "autocompleteChannels": [MockFunction],
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixTrimmed": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
        EmoticonProvider {
          "disableDispatches": false,
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
      ]
    }
    renderDividers={true}
    renderNoResults={false}
    replaceAllInputOnSelect={false}
    requiredCharacters={1}
    spellCheck="true"
    style={
      Object {
        "visibility": "visible",
      }
    }
    value="some test text"
  />
</div>
`;

exports[`components/TextBox should throw error when new property is too long 1`] = `
<div
  className="textarea-wrapper"
>
  <SuggestionBox
    channelId="channelId"
    className="form-control custom-textarea"
    completeOnTab={true}
    containerClass=""
    contextId="channelId"
    forceSuggestionsWhenBlur={false}
    id="someid"
    inputComponent={[Function]}
    isRHS={false}
    listComponent={[Function]}
    listStyle="top"
    listenForMentionKeyClick={false}
    onBlur={[Function]}
    onChange={[Function]}
    onHeightChange={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    onSelect={[Function]}
    openOnFocus={false}
    openWhenEmpty={false}
    placeholder="placeholder text"
    providers={
      Array [
        AtMentionProvider {
          "autocompleteGroups": Array [
            Object {
              "id": "gid1",
            },
            Object {
              "id": "gid2",
            },
          ],
          "autocompleteUsersInChannel": [Function],
          "currentUserId": "currentUserId",
          "data": null,
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "priorityProfiles": undefined,
          "profilesInChannel": Array [
            Object {
              "id": "id1",
            },
            Object {
              "id": "id2",
            },
          ],
          "requestStarted": false,
          "searchAssociatedGroupsForReference": [Function],
          "useChannelMentions": true,
        },
        ChannelMentionProvider {
          "autocompleteChannels": [MockFunction],
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixTrimmed": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
        EmoticonProvider {
          "disableDispatches": false,
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
      ]
    }
    renderDividers={true}
    renderNoResults={false}
    replaceAllInputOnSelect={false}
    requiredCharacters={1}
    spellCheck="true"
    style={
      Object {
        "visibility": "visible",
      }
    }
    value="some test text that exceeds char limit"
  />
</div>
`;

exports[`components/TextBox should throw error when value is too long 1`] = `
<div
  className="textarea-wrapper"
>
  <SuggestionBox
    channelId="channelId"
    className="form-control custom-textarea"
    completeOnTab={true}
    containerClass=""
    contextId="channelId"
    forceSuggestionsWhenBlur={false}
    id="someid"
    inputComponent={[Function]}
    isRHS={false}
    listComponent={[Function]}
    listStyle="top"
    listenForMentionKeyClick={false}
    onBlur={[Function]}
    onChange={[Function]}
    onHeightChange={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    onSelect={[Function]}
    openOnFocus={false}
    openWhenEmpty={false}
    placeholder="placeholder text"
    providers={
      Array [
        AtMentionProvider {
          "autocompleteGroups": Array [
            Object {
              "id": "gid1",
            },
            Object {
              "id": "gid2",
            },
          ],
          "autocompleteUsersInChannel": [Function],
          "currentUserId": "currentUserId",
          "data": null,
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "priorityProfiles": undefined,
          "profilesInChannel": Array [
            Object {
              "id": "id1",
            },
            Object {
              "id": "id2",
            },
          ],
          "requestStarted": false,
          "searchAssociatedGroupsForReference": [Function],
          "useChannelMentions": true,
        },
        ChannelMentionProvider {
          "autocompleteChannels": [MockFunction],
          "disableDispatches": false,
          "lastCompletedWord": "",
          "lastPrefixTrimmed": "",
          "lastPrefixWithNoResults": "",
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
        EmoticonProvider {
          "disableDispatches": false,
          "latestComplete": true,
          "latestPrefix": "",
          "requestStarted": false,
        },
      ]
    }
    renderDividers={true}
    renderNoResults={false}
    replaceAllInputOnSelect={false}
    requiredCharacters={1}
    spellCheck="true"
    style={
      Object {
        "visibility": "visible",
      }
    }
    value="some test text that exceeds char limit"
  />
</div>
`;
